[gd_scene load_steps=66 format=3 uid="uid://mlo1tr26tm5"]

[ext_resource type="Texture2D" uid="uid://tqv3yxp8vcy6" path="res://Art/Backgrounds/Premium Vector _ Poker table background in green color.jpg" id="1_pbkh5"]
[ext_resource type="Script" path="res://Scripts/turn_manager.gd" id="1_yllc8"]
[ext_resource type="Texture2D" uid="uid://et2os6u2o8dv" path="res://Art/DividerLine.png" id="2_cohyq"]
[ext_resource type="Texture2D" uid="uid://fsvgtfjjgvcv" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardBack_red4.png" id="3_1qmg8"]
[ext_resource type="Script" path="res://Scripts/playerHand.gd" id="3_8klya"]
[ext_resource type="Script" path="res://Scripts/deck.gd" id="4_a33xi"]
[ext_resource type="FontFile" uid="uid://d07npd1rhp40x" path="res://Fonts/Yatra_One/YatraOne-Regular.ttf" id="5_qplpb"]
[ext_resource type="Texture2D" uid="uid://b2jh4xv6lgfqg" path="res://Art/kenney_boardgame-pack/PNG/Cards/c_2_-2.png" id="5_rk3nx"]
[ext_resource type="PackedScene" uid="uid://dty272lcjejdk" path="res://Scenes/slot.tscn" id="5_xl5cb"]
[ext_resource type="Texture2D" uid="uid://depcwdmrgtd72" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs3_3.png" id="6_3sn1u"]
[ext_resource type="Texture2D" uid="uid://b07ohhm3xbf6m" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs4_4.png" id="7_p0f3m"]
[ext_resource type="Script" path="res://Scripts/ai_player.gd" id="7_pec5u"]
[ext_resource type="Texture2D" uid="uid://2vkake601j4t" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs5_5.png" id="8_ua73u"]
[ext_resource type="Texture2D" uid="uid://cldirdvjnv8db" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs6_6.png" id="9_3snf5"]
[ext_resource type="Texture2D" uid="uid://c6ke68yb6sf75" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs7_7.png" id="10_w3ann"]
[ext_resource type="Texture2D" uid="uid://c0qqpq5otkutu" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs8_8.png" id="11_c8kfl"]
[ext_resource type="Texture2D" uid="uid://5ebnxgyv7bam" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs9_9.png" id="12_kg4dw"]
[ext_resource type="Texture2D" uid="uid://b2cm3267fusu1" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubsA_1.png" id="14_423dp"]
[ext_resource type="Texture2D" uid="uid://budpnaunwpjsr" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubsK_0.png" id="16_qvkfn"]
[ext_resource type="Texture2D" uid="uid://bdvtjv0c8kmu0" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs_10_10.png" id="17_6aj54"]
[ext_resource type="Texture2D" uid="uid://cb6luj6fpph4o" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds2_-2.png" id="18_s4dnc"]
[ext_resource type="Texture2D" uid="uid://dbeiaca4ea21w" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs_J_10.png" id="18_vs2pk"]
[ext_resource type="Texture2D" uid="uid://cde80fg6uvcik" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds3_3.png" id="19_e5yux"]
[ext_resource type="Texture2D" uid="uid://doykb2g3ihh6d" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds4_4.png" id="20_7u4qm"]
[ext_resource type="Texture2D" uid="uid://c4w0snd7u67ec" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardClubs_Q_10.png" id="20_hepd3"]
[ext_resource type="Texture2D" uid="uid://dhasf1jv1w7fs" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds5_5.png" id="21_0sqf6"]
[ext_resource type="Texture2D" uid="uid://c3buxu5wlysin" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds6_6.png" id="22_remhq"]
[ext_resource type="Texture2D" uid="uid://cpoxfnt21higa" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds7_7.png" id="23_jrug3"]
[ext_resource type="Texture2D" uid="uid://smnhcl3jwlfo" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds8_8.png" id="24_ino3d"]
[ext_resource type="Texture2D" uid="uid://gk2e4w66a78" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds9_9.png" id="25_rp7yl"]
[ext_resource type="Texture2D" uid="uid://llsrs1xlbskw" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamondsA_1.png" id="27_gxu8g"]
[ext_resource type="Texture2D" uid="uid://mt8dgjx6woqj" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds_10_10.png" id="29_5me6j"]
[ext_resource type="Texture2D" uid="uid://dq86iloay5t8v" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamondsK_0.png" id="29_f372a"]
[ext_resource type="Texture2D" uid="uid://dtyxnexa1cu1u" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts2_-2.png" id="31_886tv"]
[ext_resource type="Texture2D" uid="uid://baleynodhwvhm" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds_J_10.png" id="31_njir6"]
[ext_resource type="Texture2D" uid="uid://vhrdeavgbfsh" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts3_3.png" id="32_smhsi"]
[ext_resource type="Texture2D" uid="uid://dbmxsmq7hsw87" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts4_4.png" id="33_31c83"]
[ext_resource type="Texture2D" uid="uid://cug2xl4pgrcwn" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardDiamonds_Q_10.png" id="33_a5llb"]
[ext_resource type="Texture2D" uid="uid://50l7sdhen51p" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts5_5.png" id="34_drcgd"]
[ext_resource type="Texture2D" uid="uid://cksmx5o2hujn3" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts6_6.png" id="35_jaec3"]
[ext_resource type="Texture2D" uid="uid://cm4uoapf1xlgg" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts7_7.png" id="36_w5ryb"]
[ext_resource type="Texture2D" uid="uid://dyhm43qgwrajb" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts8_8.png" id="37_j0kp3"]
[ext_resource type="Texture2D" uid="uid://bponjvik0cfbo" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts9_9.png" id="38_h6ivr"]
[ext_resource type="Texture2D" uid="uid://bhmpu4kma3ih" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHeartsA_1.png" id="40_f8vw8"]
[ext_resource type="Texture2D" uid="uid://7qq60qc7bwiy" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts_10_10.png" id="42_vrpak"]
[ext_resource type="Texture2D" uid="uid://dojusmmfxvk8w" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHeartsK_0.png" id="42_xfosb"]
[ext_resource type="Texture2D" uid="uid://c7gygidpnhs1a" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts_J_10.png" id="44_qt0nq"]
[ext_resource type="Texture2D" uid="uid://cbkabknm73trh" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades2_-2.png" id="44_vy232"]
[ext_resource type="Texture2D" uid="uid://crfjqh3vvj2l7" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades3_3.png" id="45_447f3"]
[ext_resource type="Texture2D" uid="uid://dxuvoos4hrrl3" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardHearts_Q_10.png" id="46_56tsm"]
[ext_resource type="Texture2D" uid="uid://dsdcfqq2tihhv" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades4_4.png" id="46_srr2m"]
[ext_resource type="Texture2D" uid="uid://cwoe7koc4rple" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades5_5.png" id="47_s8bd5"]
[ext_resource type="Texture2D" uid="uid://cfkvp1es5c80r" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades6_6.png" id="48_er1cc"]
[ext_resource type="Texture2D" uid="uid://c4vjh3ee13821" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades7_7.png" id="49_ifku4"]
[ext_resource type="Texture2D" uid="uid://b33djij2gxq47" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades8_8.png" id="50_evpgt"]
[ext_resource type="Texture2D" uid="uid://c7r18a28su41q" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades9_9.png" id="51_3nbeu"]
[ext_resource type="Texture2D" uid="uid://c1m2bhso8d51p" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpadesA_1.png" id="52_8sy4y"]
[ext_resource type="Texture2D" uid="uid://n687fscd86vt" path="res://Art/kenney_boardgame-pack/PNG/Cards/s_Q_10.png" id="55_2bbce"]
[ext_resource type="Texture2D" uid="uid://bqwqsb5xcyywy" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades_J_10.png" id="56_nlnhy"]
[ext_resource type="Texture2D" uid="uid://b8wpqkif5h8hr" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpadesK_0.png" id="56_q7ye2"]
[ext_resource type="Texture2D" uid="uid://bk3keud3uenuj" path="res://Art/kenney_boardgame-pack/PNG/Cards/cardSpades_10_10.png" id="57_n52m0"]
[ext_resource type="Texture2D" uid="uid://bcif5umqfmlhx" path="res://Art/kenney_boardgame-pack/PNG/Cards/EmptyCard.png" id="59_pqp7e"]
[ext_resource type="Script" path="res://Scripts/card_pile.gd" id="62_gkqfi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4ytl"]
bg_color = Color(0.295026, 0.379455, 0.326798, 0.394)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvnfo"]
bg_color = Color(0.102, 0.194, 0.126, 0.892)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.919369, 0.999865, 0.976224, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yllc8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pbkh5")

[node name="Line" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -21.0
offset_right = 334.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_cohyq")
expand_mode = 1

[node name="MySide" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 259.0
offset_top = -280.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="MyHand" type="GridContainer" parent="MySide" node_paths=PackedStringArray("scoreLabel")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 257.0
offset_top = -40.0
offset_right = -178.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.13165, 1.13165)
columns = 3
script = ExtResource("3_8klya")
scoreLabel = NodePath("../Label")
scoreTag = "My Points: "

[node name="Slot" parent="MySide/MyHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot2" parent="MySide/MyHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot3" parent="MySide/MyHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot4" parent="MySide/MyHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot5" parent="MySide/MyHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot6" parent="MySide/MyHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Label" type="Label" parent="MySide"]
layout_mode = 0
offset_left = 76.0
offset_top = 183.0
offset_right = 982.0
offset_bottom = 520.0
scale = Vector2(0.210641, 0.210641)
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 110
text = "My Points: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComputerSide" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 262.0
offset_top = 11.0
offset_bottom = 313.0
grow_horizontal = 2
mouse_filter = 1
script = ExtResource("7_pec5u")

[node name="Label" type="Label" parent="ComputerSide"]
layout_mode = 0
offset_left = 10.0
offset_top = 1.0
offset_right = 1223.0
offset_bottom = 338.0
scale = Vector2(0.210641, 0.210641)
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 110
text = "Computer's Points: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComputersHand" type="GridContainer" parent="ComputerSide" node_paths=PackedStringArray("scoreLabel")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 253.0
offset_top = -9.0
offset_right = -179.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.13165, 1.13165)
columns = 3
script = ExtResource("3_8klya")
playerIndex = 1
scoreLabel = NodePath("../Label")
scoreTag = "Computer's Points: "

[node name="Slot" parent="ComputerSide/ComputersHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot2" parent="ComputerSide/ComputersHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot3" parent="ComputerSide/ComputersHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot4" parent="ComputerSide/ComputersHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot5" parent="ComputerSide/ComputersHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="Slot6" parent="ComputerSide/ComputersHand" instance=ExtResource("5_xl5cb")]
layout_mode = 2

[node name="CardPile" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 179.0
offset_top = 126.0
offset_right = 340.0
offset_bottom = -125.0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_a33xi")
cardDeck = [ExtResource("5_rk3nx"), ExtResource("6_3sn1u"), ExtResource("7_p0f3m"), ExtResource("8_ua73u"), ExtResource("9_3snf5"), ExtResource("10_w3ann"), ExtResource("11_c8kfl"), ExtResource("12_kg4dw"), ExtResource("17_6aj54"), ExtResource("14_423dp"), ExtResource("18_vs2pk"), ExtResource("16_qvkfn"), ExtResource("20_hepd3"), ExtResource("18_s4dnc"), ExtResource("19_e5yux"), ExtResource("20_7u4qm"), ExtResource("21_0sqf6"), ExtResource("22_remhq"), ExtResource("23_jrug3"), ExtResource("24_ino3d"), ExtResource("25_rp7yl"), ExtResource("29_5me6j"), ExtResource("27_gxu8g"), ExtResource("31_njir6"), ExtResource("29_f372a"), ExtResource("33_a5llb"), ExtResource("31_886tv"), ExtResource("32_smhsi"), ExtResource("33_31c83"), ExtResource("34_drcgd"), ExtResource("35_jaec3"), ExtResource("36_w5ryb"), ExtResource("37_j0kp3"), ExtResource("38_h6ivr"), ExtResource("42_vrpak"), ExtResource("40_f8vw8"), ExtResource("44_qt0nq"), ExtResource("42_xfosb"), ExtResource("46_56tsm"), ExtResource("44_vy232"), ExtResource("45_447f3"), ExtResource("46_srr2m"), ExtResource("47_s8bd5"), ExtResource("48_er1cc"), ExtResource("49_ifku4"), ExtResource("50_evpgt"), ExtResource("51_3nbeu"), ExtResource("52_8sy4y"), ExtResource("56_nlnhy"), ExtResource("57_n52m0"), ExtResource("55_2bbce"), ExtResource("56_q7ye2")]
cardBack = ExtResource("3_1qmg8")

[node name="DiscardCard" type="TextureRect" parent="CardPile"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = 14.5
offset_right = 88.5
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.696, 0.696)

[node name="DiscardPile" type="TextureRect" parent="CardPile"]
self_modulate = Color(1, 1, 1, 0.313726)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.4999
offset_top = 14.5
offset_right = 88.5001
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.695735, 0.695735)
texture = ExtResource("59_pqp7e")
stretch_mode = 6
script = ExtResource("62_gkqfi")

[node name="DeckPile" type="TextureRect" parent="CardPile"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -138.5
offset_right = 88.5
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00484131
scale = Vector2(0.696, 0.696)
texture = ExtResource("3_1qmg8")
script = ExtResource("62_gkqfi")

[node name="DiscardBtn" type="Button" parent="CardPile"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -36.0
offset_right = 72.5
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 21
text = "Discard Card"

[node name="DrawBtn" type="Button" parent="CardPile"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -36.0
offset_right = 72.5
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 21
text = " Go Back and Draw "

[node name="DeckCard" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -138.0
offset_right = -228.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00484131
scale = Vector2(0.696, 0.696)
mouse_filter = 2
texture = ExtResource("3_1qmg8")

[node name="SwitchCard" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = 15.0
offset_right = -228.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00484131
scale = Vector2(0.696, 0.696)
mouse_filter = 2

[node name="Message" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 9.0
offset_top = 162.0
offset_right = 902.0
offset_bottom = 1776.0
scale = Vector2(0.210641, 0.210641)
theme_override_colors/font_color = Color(0.886, 0.886, 0.886, 0.849)
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 112
text = "Choose one of your cards to switch or discard"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TurnPanel" type="Panel" parent="."]
layout_mode = 1
offset_left = 11.0
offset_top = 9.0
offset_right = 245.0
offset_bottom = 85.0
scale = Vector2(0.93965, 0.93965)
theme_override_styles/panel = SubResource("StyleBoxFlat_y4ytl")

[node name="TurnLabel" type="Label" parent="TurnPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 873.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.210641, 0.210641)
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 110
text = "Current Turn:
No one"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -176.0
offset_right = 218.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pvnfo")

[node name="Heading" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -218.5
offset_top = 12.0
offset_right = 1856.5
offset_bottom = 349.0
grow_horizontal = 2
scale = Vector2(0.210641, 0.210641)
theme_override_colors/font_color = Color(0.773823, 0.830392, 0.796003, 1)
theme_override_colors/font_outline_color = Color(0.000770071, 0.0658715, 0.0163383, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 200
text = "Awesome!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Result" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -218.5
offset_top = 93.0
offset_right = 1856.5
offset_bottom = 430.0
grow_horizontal = 2
scale = Vector2(0.210641, 0.210641)
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 170
text = "You Won!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinCount" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -218.5
offset_top = 152.0
offset_right = 1856.5
offset_bottom = 489.0
grow_horizontal = 2
scale = Vector2(0.210641, 0.210641)
theme_override_colors/font_color = Color(0.850184, 0.889476, 0.867318, 1)
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 137
text = "       You: 0       Computer: 1"
vertical_alignment = 1

[node name="Line" type="TextureRect" parent="GameOverPanel"]
modulate = Color(0.690196, 0.760784, 0.721569, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.5
offset_top = -113.0
offset_right = 97.5
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_cohyq")
expand_mode = 1

[node name="AgainBtn" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -197.5
offset_top = -92.0
offset_right = -9.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 26
text = "Play Again"

[node name="ExitBtn" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 8.5
offset_top = -92.0
offset_right = 196.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_qplpb")
theme_override_font_sizes/font_size = 28
text = "Exit"

[connection signal="gui_input" from="CardPile/DiscardPile" to="CardPile/DiscardPile" method="_on_pile_clicked"]
[connection signal="gui_input" from="CardPile/DeckPile" to="CardPile/DeckPile" method="_on_pile_clicked"]
[connection signal="pressed" from="CardPile/DiscardBtn" to="CardPile" method="discard_card"]
[connection signal="pressed" from="CardPile/DrawBtn" to="CardPile" method="draw_card"]
[connection signal="pressed" from="GameOverPanel/AgainBtn" to="." method="restart"]
[connection signal="pressed" from="GameOverPanel/ExitBtn" to="." method="exit"]
